[gd_scene load_steps=2 format=3 uid="uid://c47p7x47cnx80"]

[ext_resource type="Script" path="res://User Interface/main_menu.gd" id="1_xcokj"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcokj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.385941, 0.783357, 0.95674, 1)

[node name="Title Background" type="ColorRect" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -216.0
offset_right = 250.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.611765, 0.85098, 1)

[node name="Label" type="Label" parent="CanvasLayer/Background/Title Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Untitled Star Game!!!"

[node name="Button Background" type="ColorRect" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 59.0
offset_right = 200.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.611765, 0.85098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background/Button Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -180.0
offset_right = 171.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="New Game" type="Button" parent="CanvasLayer/Background/Button Background/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Load Game" type="Button" parent="CanvasLayer/Background/Button Background/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Exit Game" type="Button" parent="CanvasLayer/Background/Button Background/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="CanvasLayer/Background/Button Background/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Button Background/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Button Background/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
